@@ -1,6 +1,8 @@
 Version 2.28
 -------------
-Add setting to expand blueprints in tooltips by default
+Added setting to expand blueprints in tooltips by default
+Removed white arrow from tooltips and made border more pronounced
+Align style of loadout tooltip with material tooltip
 
 Version 2.27
 -------------
